feat: implements message react count process
